Fix history scrollbar after work on condensed widgets.
Closes #20416.

--- a/data/themes/chunk-condensed.css
+++ b/data/themes/chunk-condensed.css
@@ -8,8 +8,6 @@
   margin-bottom: 0;
 }
 
-#history-number,
-#history-ui *,
 .dt_plugin_ui button,
 .dt_plugin_ui checkbutton label
 {
